# speech-core

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  README.zh-CN.md  README_ar.md  README_de.md  README_es.md  README_fr.md  README_hi.md  README_ja.md  README_ko.md  README_pt.md  README_ru.md  README_th.md  README_tr.md  README_vi.md  README_zh.md  THIRD-PARTY-NOTICES.md
.github/workflows/: build-litert.yml  ci.yml  nightly.yml  release.yml  weekly-fdb.yml  weekly-voxcpm2.yml
docs/: c-api.md  cli.md  fdb-bench.md  http-server.md  interfaces.md  models.md  onnx-cuda-export-plan.md  pipeline.md  tools.md  voxcpm2-clone-testing.md
examples/common/: default_model_dir.h  utf8_args.h
examples/fdb_bench/: fdb_bench.cpp  fdb_corpus.cpp  fdb_corpus.h  fdb_summary.cpp  fdb_summary.h  fdb_summary_lib.cpp  wav_io.cpp  wav_io.h
examples/http/: speech_server.cpp
examples/linux/: CMakeLists.txt  Dockerfile  README.md  setup_linux.sh  toolchain-aarch64.cmake
examples/linux/demo/: main.cpp
examples/linux/include/: speech.h
examples/linux/src/: speech.cpp
examples/linux/tests/: test_pipeline.cpp
examples/linux/tools/: phonemize.cpp  synthesize.cpp  transcribe.cpp
examples/litert/: chatterbox_flow_check.cpp  chatterbox_t3_check.cpp  chatterbox_tok_check.cpp  chatterbox_tts_cli.cpp  hf_fetch.cpp  kokoro_tts_bench.cpp  supertonic_tts.cpp  tensor_bench.cpp  voxcpm2_clone.cpp
examples/onnx/: cosyvoice3_synth.cpp  diarization_parity.cpp  pocket_tts_bench.cpp  pocket_tts_roundtrip.cpp  pocket_tts_roundtrip.tsv  sidon_restore.cpp  voxcpm2_clone.cpp
include/speech_core/: chatterbox_c.h  indic_mio_c.h  interfaces.h  speech_core.h  speech_core_c.h  supertonic_c.h  tts_c.h  tts_synthesis_options.h  voxcpm2_c.h
include/speech_core/audio/: audio_buffer.h  fft.h  mel.h  offline_spectral_de_esser.h  pcm_codec.h  resampler.h  seamless_fbank.h  stft.h  wespeaker_fbank.h
include/speech_core/diarization/: diarization_pipeline.h
include/speech_core/llm/: ollama_llm.h
include/speech_core/models/: chatterbox_tokenizer.h  context_graph.h  deepfilter.h  indic_mio_tokenizer.h  kokoro_multilingual.h  kokoro_phonemizer.h  kokoro_tts.h  litert_chatterbox_tts.h  litert_engine.h  litert_functiongemma_llm.h  litert_indic_mio_tts.h  litert_kokoro_tts.h  litert_nemotron_multilingual_stt.h  litert_nemotron_streaming_stt.h  litert_omnilingual_stt.h  litert_parakeet_stt.h  litert_pyannote_segmentation.h  litert_silero_vad.h  litert_supertonic_tts.h  litert_voxcpm2_tts.h  litert_wespeaker_embedding.h  nemotron_multilingual_stt.h  onnx_cosyvoice3_tts.h  onnx_engine.h  onnx_nemotron_streaming_stt.h  onnx_personaplex.h  onnx_pocket_tts.h  onnx_pyannote_segmentation.h  onnx_sidon_restorer.h  onnx_voxcpm2_tts.h  onnx_voxcpm_tts.h  onnx_wespeaker_embedding.h  onnx_whisper_stt.h  parakeet_language_guidance.h  parakeet_stt.h  pocket_tts_tokenizer.h  silero_vad.h  supertonic_tokenizer.h  transducer_beam.h  tts_synthesis_options.h  (+3 more)
include/speech_core/pipeline/: agent_config.h  conversation_context.h  speech_queue.h  turn_detector.h  voice_pipeline.h
include/speech_core/protocol/: events.h  realtime_protocol.h
include/speech_core/tools/: intent_matcher.h  tool_executor.h  tool_registry.h  tool_types.h
include/speech_core/util/: json.h  text_chunker.h
include/speech_core/vad/: streaming_vad.h  vad_config.h
scripts/: build_litert_lm_android.sh  build_xcframework.sh  download_models.ps1  download_models.sh  download_models_litert.sh  download_personaplex_onnx.sh  download_pocket_tts_onnx.sh  download_voxcpm2_litert.sh  download_whisper_onnx.sh  fdb_score.py  fetch_litert.sh  fetch_litert_lm.sh  make_fdb_mini.py  nemo_reference_wer.py  nemotron_wer_rtf.py  requirements-fdb-score.txt  setup_litert.sh  spectrum_check.py  speech-dispatch.sh
src/: speech_core_c.cpp  tts_postprocess_internal.h  tts_synthesis_options.cpp
src/audio/: audio_buffer.cpp  fft.cpp  mel.cpp  offline_spectral_de_esser.cpp  pcm_codec.cpp  resampler.cpp  seamless_fbank.cpp  stft.cpp  wespeaker_fbank.cpp
src/diarization/: diarization_pipeline.cpp
src/http/: openai_tts_server.cpp  openai_tts_server.h
src/llm/: ollama_llm.cpp
src/models/: context_graph.cpp  parakeet_language_guidance.cpp
src/models/cosyvoice3/: onnx_cosyvoice3_tts.cpp
src/models/deepfilter/: deepfilter.cpp  deepfilter_dsp.cpp  deepfilter_dsp.h
src/models/kokoro/: kokoro_multilingual.cpp  kokoro_phonemizer.cpp  kokoro_tts.cpp
src/models/litert/: INDIC_MIO_LITERT_PLAN.md  chatterbox_c.cpp  chatterbox_tokenizer.cpp  hf_download.cpp  hf_download.h  indic_mio_c.cpp  indic_mio_istft.cpp  indic_mio_istft.h  indic_mio_tokenizer.cpp  litert_chatterbox_tts.cpp  supertonic_c.cpp  (+17 more)
src/pipeline/: conversation_context.cpp  speech_queue.cpp  turn_detector.cpp  voice_pipeline.cpp
src/protocol/: realtime_protocol.cpp
src/tools/: intent_matcher.cpp  tool_executor.cpp  tool_registry.cpp
src/util/: text_chunker.cpp
src/vad/: streaming_vad.cpp
tests/: bench_litert_functiongemma_llm.cpp  bench_litert_stt.cpp  bench_ort_models.cpp  run_personaplex.cpp  test_audio_buffer.cpp  test_c_api.cpp  test_context_graph.cpp  test_conversation_context.cpp  test_deepfilter_dsp.cpp  test_deesser.cpp  test_diarization.cpp  test_fdb_bench_smoke.cpp  test_fdb_summary.cpp  test_fft.cpp  test_hf_download.cpp  test_indic_mio_istft.cpp  test_indic_mio_tokenizer.cpp  test_litert_chatterbox.cpp  test_litert_functiongemma_llm.cpp  test_litert_indic_mio.cpp  test_litert_models.cpp  test_litert_voxcpm2_clone_cli.cpp  test_mel_parakeet_contract.cpp  test_models.cpp  test_ollama_llm.cpp  test_openai_stt_server_e2e.cpp  test_openai_tts_server.cpp  test_parakeet_language_guidance.cpp  test_pcm_codec.cpp  test_pipeline_e2e.cpp  test_pipeline_ollama_e2e.cpp  test_pipeline_stress.cpp  test_pocket_tts.cpp  test_pocket_tts_tokenizer.cpp  test_realtime_protocol.cpp  test_resampler.cpp  test_seamless_fbank.cpp  test_speech_dispatch.sh  test_speech_queue.cpp  test_streaming_vad.cpp  (+7 more)
tests/data/: fdb_baseline.json  indic_mio_istft_meta.json  indic_mio_tokenizer_fixtures.json
(+21 files in other folders)
